welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.code
def flower(c:Color)
	{setCouleurBrosse(c)
	baisseBrosse()
	avance()
	avance()
	recule()
	gauche()
	avance()
	recule()
	recule()
	avance()
	setCouleurBrosse(Color.YELLOW)
	leveBrosse()
	droite()}
	
def growFlowers(r:Color,c:Color,o:Color,p:Color,g:Color)
{
flower(r)
avance()
avance()
avance()
flower(c)
recule()
recule()
recule()
droite()
avance()
avance()
gauche()
flower(o)
recule()
recule()
recule()
droite()
avance()
avance()
gauche()
flower(p)
avance()
avance()
avance()
flower(g)
recule()
recule()
recule()
recule()
recule()
}

growFlower(Color.RED,Color.CYAN,Color.ORANGE,Color.PINK,Color.GREEN)
def flowerCase()
{
gauche()
avance()
avance()
droite()
avance()
avance()
avance()
avance()
avance()
avance()
flower(Color.BLUE)
avance()
gauche()
avance()
avance()
droite()
growFlowers(Color.RED,Color.CYAN,Color.ORANGE,Color.PINK,Color.GREEN)
}
